AC_INIT([shefLMStore], [1.0], [bug-automake@gnu.org])
AM_INIT_AUTOMAKE([-Werror foreign])
AC_PROG_CC
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_PROG_LIBTOOL
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
   src/cmph_0_9/Makefile
   src/zlib-1.2.3/Makefile
 man/Makefile
])
AC_OUTPUT
