AM_CPPFLAGS = -m64

noinst_LIBRARIES = libcmph.a

libcmph_a_SOURCES = bdz.h bdz_ph.h bdz_structs.h bdz_structs_ph.h bitbool.h bmz.h bmz8.h bmz8_structs.h bmz_structs.h brz.h brz_structs.h buffer_entry.h buffer_manager.h chd.h chd_ph.h chd_structs.h chd_structs_ph.h chm.h chm_structs.h cmph.h cmph_structs.h cmph_time.h cmph_types.h compressed_rank.h compressed_seq.h debug.h fch.h fch_buckets.h fch_structs.h graph.h hash.h hash_state.h jenkins_hash.h miller_rabin.h select.h select_lookup_tables.h vqueue.h vstack.h wingetopt.h bdz.c bdz_ph.c bmz.c bmz8.c brz.c buffer_entry.c buffer_manager.c chd.c chd_ph.c chm.c cmph.c cmph_structs.c compressed_rank.c compressed_seq.c fch.c fch_buckets.c graph.c hash.c jenkins_hash.c miller_rabin.c select.c vqueue.c vstack.c wingetopt.c

INCLUDES = -I@top_srcdir@/src/cmph_0_9