AM_CPPFLAGS = -m64

noinst_LIBRARIES = libzlib.a

libzlib_a_SOURCES = crc32.h deflate.h inffast.h inffixed.h inflate.h inftrees.h trees.h zconf.h zconf.in.h zlib.h zutil.h adler32.c compress.c crc32.c deflate.c gzio.c infback.c inffast.c inflate.c inftrees.c trees.c uncompr.c zutil.c

INCLUDES = -I@top_srcdir@/src/zlib-1.2.3